wow i am an idiot

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sdl2 = { version = "0.37.0", features = ["bundled"] }
+sdl2 = { version = "0.37.0", features = ["bundled", "gfx"] }
